Admin page start Added and started development on the admin page Gave the admin page a login form and a navbar Made that navbar responsive

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,11 +1,11 @@
 // Imports
-@import "../node_modules/bootswatch/dist/quartz/_variables";
-@import "../node_modules/bootstrap/scss/bootstrap";
-@import "../node_modules/bootswatch/dist/quartz/_bootswatch";
-@import "../node_modules/fontawesome-free/scss/fontawesome.scss";
-@import "../node_modules/fontawesome-free/scss/brands.scss";
-@import "../node_modules/fontawesome-free/scss/regular.scss";
-@import "../node_modules/fontawesome-free/scss/solid.scss";
+@import "../../node_modules/bootswatch/dist/quartz/_variables";
+@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/bootswatch/dist/quartz/_bootswatch";
+@import "../../node_modules/fontawesome-free/scss/fontawesome.scss";
+@import "../../node_modules/fontawesome-free/scss/brands.scss";
+@import "../../node_modules/fontawesome-free/scss/regular.scss";
+@import "../../node_modules/fontawesome-free/scss/solid.scss";
 
 
 // Font-face
